feat: improving agenda and exercises